kubernetes/apps/servitor-apps/hermes-agent/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hermes-agent-egress
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": hermes-agent
  egress:
    # LLM
    - toServices:
        - k8sService:
            serviceName: agentgateway-proxy
            namespace: networking-system
      toPorts:
        - ports:
            - { port: "80", protocol: TCP }
          rules:
            http:
              - method: "POST"
                path: "/chat/.*"

    # MCP
    - toEndpoints:
        - matchLabels:
            "toolhive.stacklok.dev/component": virtualmcp
      toPorts:
        - ports:
            - { port: "4483", protocol: TCP }

    # DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
